test/fixtures/errors/partial-literal.mustache
<!DOCTYPE html>
<html>
    <head>
        <title>Page with section error</title>
    </head>
    <body>
        <h1>Title</h1>
        {{>partials/user|Label='Name|Surname'|Surname='Surname'}}
    </body>
</html>
